_integration/testsuite/gatewayapi/002-header-condition-match.yaml
# Copyright Project Contour Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-conformance-echo
$apply:
  fixture:
    as: echo-header-exact

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-conformance-echo
$apply:
  fixture:
    as: echo-header-exact

---

apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: contour
  namespace: projectcontour
spec:
  gatewayClassName: contour-class
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        namespaces:
          from: All
        selector:
          matchLabels:
            app: filter

---

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http-filter-1
  labels:
    app: filter
spec:
  hostnames:
    - conditions.projectcontour.io
  rules:
    - matches:
      - headers:
          type: Exact
          values:
            My-Header: Foo
      forwardTo:
      - serviceName: echo-header-exact
        port: 80

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

cases := {
  { "header": "My-Header", "value": "Foo", "status": 200, "service": "echo-header-exact" },
  { "header": "My-Header", "value": "NotFoo", "status": 404 },
  { "header": "Other-Header", "value": "Foo", "status": 404 },
}

requests[{ "req": req, "wanted_status": status, "wanted_service": service }] {
  case := cases[_]

  req := {
    "method": "GET",
    "url": url.http(sprintf("/%d", [time.now_ns()])),
    "headers": {
      "Host": "conditions.projectcontour.io",
      "User-Agent": client.ua("header-condition-match"),
      case.header: case.value,
    }
  }

  status := case.status
  service := case.service
}

check_for_status_code [msg] {
  req := requests[_]
  resp := http.send(req.req)
  msg := expect.response_status_is(resp, req.wanted_status)
}

check_for_service_routing [msg] {
  req := requests[_]
  resp := http.send(req.req)
  msg := expect.response_service_is(resp, req.wanted_service)
}
