_integration/testsuite/gatewayapi/003-invalid-forwardto.yaml
# Copyright Project Contour Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-conformance-echo
$apply:
  fixture:
    as: echo-slash-default

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-conformance-echo
$apply:
  fixture:
    as: echo-slash-default

---

apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: contour-class
spec:
  controller: projectcontour.io/ingress-controller

---

apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: contour
  namespace: projectcontour
spec:
  gatewayClassName: contour-class
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        namespaces:
          from: All
        selector:
          matchLabels:
            app: filter

---

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http-filter-1
  labels:
    app: filter
spec:
  gateways:
    allow: All
  hostnames:
    - forwardto.projectcontour.io
  rules:
    - matches:
      - path:
          type: Prefix
          value: /invalidref
      forwardTo:
      - serviceName: invalid
        port: 80
    - matches:
      - path:
          type: Prefix
          value: /invalidport
      forwardTo:
      - serviceName: echo-slash-default
    - matches:
        - path:
            type: Prefix
            value: /invalidservicename
      forwardTo:
        - serviceName: ""
          port: 80
    - matches:
      - path:
          type: Prefix
          value: /
      forwardTo:
      - serviceName: echo-slash-default
        port: 80

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

Response := client.Get({
  "url": url.http("/"),
  "headers": {
    "Host": "forwardto.projectcontour.io",
    "User-Agent": client.ua("invalid-forwardto"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 200)
}

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

Response := client.Get({
  "url": url.http("/invalidref"),
  "headers": {
    "Host": "forwardto.projectcontour.io",
    "User-Agent": client.ua("invalid-forwardto"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 503)
}

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

Response := client.Get({
  "url": url.http("/invalidport"),
  "headers": {
   "Host": "forwardto.projectcontour.io",
   "User-Agent": client.ua("invalid-forwardto"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 503)
}

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

Response := client.Get({
  "url": url.http("/invalidservicename"),
  "headers": {
    "Host": "forwardto.projectcontour.io",
    "User-Agent": client.ua("invalid-forwardto"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 503)
}
